# musicCRS-DAT640

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _model.py  llama.py  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt
backend/: app.py  parsing.py  requirements.txt
data/: create_neighbours_db.py  create_surface_dictionary.py  create_surface_dictionary_artists.py  data_conversion.py  database_manager.py  delete_null.py  filter_database.py  filter_database_artists.py  playlist.txt  recommendations.py  view_data.py
frontend/: index.html  playlist.txt  playlist_agent.py  style.css  test.py
models/: playlist.py  song.py
musicCRS/backend/: app.py  parsing.py  playlist_agent.py  requirements.txt  run_agent.py
musicCRS/data/: create_neighbours_db.py  create_surface_dictionary.py  create_surface_dictionary_artists.py  database_manager.py  delete_null.py  filter_database.py  recommendations.py  test.py
musicCRS/frontend/: index.html
musicCRS/models/: playlist.py  song.py
musicCRS/nlu/: mappings.py  nlu.py
musicCRS/user_simulation/: advanced_user_simulator.py  naive_user_simulator.py  run_simulation.py
nlu/: mappings.py  nlu.py  post-processing.py  post_processing.py
tests/: advanced_user_simulator.py  run_simulation.py  simulation_platform.py  user_profile.py
tests/backend/: test_parsing.py
